--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+@font-face{
+    font-family: Pointfree;
+    src: local('pointfree.ttf'), url('pointfree.ttf') format('ttf');
+}
+body{   
+    text-align:center;
+    font-family: 'Pointfree', monospace; 
+}
+th{
+    text-align:left
+}
 .container {
     background-color:#606060;
     display: grid;
